# booking_system_backend

./: .gitignore  docker-compose.local.yml  main.py  pyproject.toml
src/booking/: dependencies.py  routes.py  schemas.py  services.py
src/core/: db.py  settings.py
src/facilities/: routes.py  schemas.py
src/templates/: login.html
src/user/: routes.py  schemas.py  security.py  services.py
src/user/telegram/: routes.py  services.py
